@@ -1,34 +1,30 @@
 ---
 fixtures:
   repositories:
-    auditd: https://github.com/simp/pupmod-simp-auditd
-    augeas_core: https://github.com/puppetlabs/puppetlabs-augeas_core
-    augeasproviders_core: https://github.com/simp/augeasproviders_core
-    augeasproviders_grub: https://github.com/simp/augeasproviders_grub
-    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
-    concat: https://github.com/simp/puppetlabs-concat
-    logrotate: https://github.com/simp/pupmod-simp-logrotate
-    pki: https://github.com/simp/pupmod-simp-pki
-    rsyslog: https://github.com/simp/pupmod-simp-rsyslog
-    simplib: https://github.com/simp/pupmod-simp-simplib
-    stdlib: https://github.com/simp/puppetlabs-stdlib
-
-    # Fixtures for the AD acceptance test
-    augeasproviders_ssh: https://github.com/simp/augeasproviders_ssh
-    nsswitch: https://github.com/simp/puppet-nsswitch
-    pam: https://github.com/simp/pupmod-simp-pam
-    oddjob: https://github.com/simp/pupmod-simp-oddjob
-    resolv: https://github.com/simp/pupmod-simp-resolv
-    simp: https://github.com/simp/pupmod-simp-simp
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
-    ssh: https://github.com/simp/pupmod-simp-ssh
-    systemd: https://github.com/simp/puppet-systemd
-    # Fixtures for ldap accectance test
-    simp_openldap: https://github.com/simp/pupmod-simp-simp_openldap
-    # Fixtures for ds389 test
-    simp_ds389: https://github.com/simp/pupmod-simp-simp_ds389
-    ds389: https://github.com/simp/pupmod-simp-ds389
-    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld
-    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld
+    auditd: https://github.com/simp/pupmod-simp-auditd.git
+    augeas_core: https://github.com/puppetlabs/puppetlabs-augeas_core.git
+    augeasproviders_core: https://github.com/simp/augeasproviders_core.git
+    augeasproviders_grub: https://github.com/simp/augeasproviders_grub.git
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
+    concat: https://github.com/simp/puppetlabs-concat.git
+    logrotate: https://github.com/simp/pupmod-simp-logrotate.git
+    pki: https://github.com/simp/pupmod-simp-pki.git
+    rsyslog: https://github.com/simp/pupmod-simp-rsyslog.git
+    simplib: https://github.com/simp/pupmod-simp-simplib.git
+    stdlib: https://github.com/simp/puppetlabs-stdlib.git
+    augeasproviders_ssh: https://github.com/simp/augeasproviders_ssh.git
+    nsswitch: https://github.com/simp/puppet-nsswitch.git
+    pam: https://github.com/simp/pupmod-simp-pam.git
+    oddjob: https://github.com/simp/pupmod-simp-oddjob.git
+    resolv: https://github.com/simp/pupmod-simp-resolv.git
+    simp: https://github.com/simp/pupmod-simp-simp.git
+    simp_options: https://github.com/simp/pupmod-simp-simp_options.git
+    ssh: https://github.com/simp/pupmod-simp-ssh.git
+    systemd: https://github.com/simp/puppet-systemd.git
+    simp_openldap: https://github.com/simp/pupmod-simp-simp_openldap.git
+    simp_ds389: https://github.com/simp/pupmod-simp-simp_ds389.git
+    ds389: https://github.com/simp/pupmod-simp-ds389.git
+    simp_firewalld: https://github.com/simp/pupmod-simp-simp_firewalld.git
+    firewalld: https://github.com/simp/pupmod-voxpupuli-firewalld.git
   symlinks:
     sssd: "#{source_dir}"
